progetto quasi concluso

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 
                 <div class="col">
 
-                    <img src="img/male1.png" alt="Marco Bianchi">
+                    <img src="img/female1.png" alt="Laura Rossi">
 
                     <div class="card">
-                        <h2>Marco Bianchi</h2>
+                        <h2>Laura Rossi</h2>
                         <p>Designer</p>
                         <a href="mailto:marcobianchi@team.com">marcobianchi&#64team.com</a>
                     </div>
@@ -52,10 +52,10 @@
 
                 <div class="col">
 
-                    <img src="img/male1.png" alt="Marco Bianchi">
+                    <img src="img/male2.png" alt="Giorgio Verdi">
 
                     <div class="card">
-                        <h2>Marco Bianchi</h2>
+                        <h2>Giorgio Verdi</h2>
                         <p>Designer</p>
                         <a href="mailto:marcobianchi@team.com">marcobianchi&#64team.com</a>
                     </div>
@@ -66,10 +66,10 @@
 
                 <div class="col">
 
-                    <img src="img/male1.png" alt="Marco Bianchi">
+                    <img src="img/female2.png" alt="Marta Ipsum">
 
                     <div class="card">
-                        <h2>Marco Bianchi</h2>
+                        <h2>Marta Ipsum</h2>
                         <p>Designer</p>
                         <a href="mailto:marcobianchi@team.com">marcobianchi&#64team.com</a>
                     </div>
@@ -80,10 +80,10 @@
 
                 <div class="col">
 
-                    <img src="img/male1.png" alt="Marco Bianchi">
+                    <img src="img/male3.png" alt="Roberto Lorem">
 
                     <div class="card">
-                        <h2>Marco Bianchi</h2>
+                        <h2>Roberto Lorem</h2>
                         <p>Designer</p>
                         <a href="mailto:marcobianchi@team.com">marcobianchi&#64team.com</a>
                     </div>
@@ -94,10 +94,10 @@
 
                 <div class="col">
 
-                    <img src="img/male1.png" alt="Marco Bianchi">
+                    <img src="img/female3.png" alt="Daniela Amet">
 
                     <div class="card">
-                        <h2>Marco Bianchi</h2>
+                        <h2>Daniela Amet</h2>
                         <p>Designer</p>
                         <a href="mailto:marcobianchi@team.com">marcobianchi&#64team.com</a>
                     </div>
