--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
-<body class="debug">
+
+<body>
     
     <main>
 
@@ -42,8 +43,8 @@
 
                     <div class="card">
                         <h2>Laura Rossi</h2>
-                        <p>Designer</p>
-                        <a href="mailto:marcobianchi@team.com">marcobianchi&#64team.com</a>
+                        <p>Front-end Developer</p>
+                        <a href="mailto:laurarossi@team.com">laurarossi&#64team.com</a>
                     </div>
                 </div>
 
@@ -56,8 +57,8 @@
 
                     <div class="card">
                         <h2>Giorgio Verdi</h2>
-                        <p>Designer</p>
-                        <a href="mailto:marcobianchi@team.com">marcobianchi&#64team.com</a>
+                        <p>Back-end Developer</p>
+                        <a href="mailto:giorgioverdi@team.com">giorgioverdi&#64team.com</a>
                     </div>
                 </div>
 
@@ -70,8 +71,8 @@
 
                     <div class="card">
                         <h2>Marta Ipsum</h2>
-                        <p>Designer</p>
-                        <a href="mailto:marcobianchi@team.com">marcobianchi&#64team.com</a>
+                        <p>SEO Specialist</p>
+                        <a href="mailto:martaipsum@team.com">martaipsum&#64team.com</a>
                     </div>
                 </div>
 
@@ -84,8 +85,8 @@
 
                     <div class="card">
                         <h2>Roberto Lorem</h2>
-                        <p>Designer</p>
-                        <a href="mailto:marcobianchi@team.com">marcobianchi&#64team.com</a>
+                        <p>Project Manager</p>
+                        <a href="mailto:robertolorem@team.com">mailto:robertolorem&#64team.com</a>
                     </div>
                 </div>
 
@@ -98,8 +99,8 @@
 
                     <div class="card">
                         <h2>Daniela Amet</h2>
-                        <p>Designer</p>
-                        <a href="mailto:marcobianchi@team.com">marcobianchi&#64team.com</a>
+                        <p>Analyst</p>
+                        <a href="mailto:danielaamet@team.com">danielaamet&#64team.com</a>
                     </div>
                 </div>
 
